--- a/docroot/themes/custom/site/templates/node/full/node--vih-course-period--full.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-course-period--full.html.twig
@@ -66,7 +66,7 @@
  */
 #}
 
-<div class="boxy">
+<div class="boxy boxy--class-packages boxy--class-packages--list-advanced">
   <div class="boxy__body">
 
     <!-- Begin - panels -->
@@ -77,7 +77,6 @@
           {{ label }}
         </h4>
       </div>
-
 
       <div class="toggler">
         <!-- Begin - desktop tabs -->
