--- a/docroot/themes/custom/site/src/styles/theme/components/_panels.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_panels.scss
@@ -140,6 +140,10 @@
 // Variants
 // --------------------------------------------------
 
+.panel-type--color-black {
+  @include panel-type-mixin(#000);
+}
+
 .panel-type--color-blue {
   @include panel-type-mixin($brand-primary);
 }
