--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -283,7 +283,7 @@
                                                 {% endfor %}
 
                                                 {# All subjects button #}
-                                                <div class="panel panel-default panel-type--color-green">
+                                                <div class="panel panel-default panel-type--color-black">
 
                                                     <!-- Begin - heading -->
                                                     <div class="panel-heading">
