VI-215 short course subscription, adding country

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-added-participant.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-added-participant.html.twig
@@ -42,6 +42,12 @@
                 {{ addedParticipant['city'] }}
               </div>
             {% endif %}
+            {% if addedParticipant['country'] %}
+              <div>
+                {{ "Country"|t }}:
+                {{ addedParticipant['country'] }}
+              </div>
+            {% endif %}
             <ul>
                 {% for addedParticipantOption in addedParticipant['orderedOptions'] %}
                     {% if addedParticipantOption['option']['name'] %}
