--- a/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
@@ -33,11 +33,11 @@
           {{ "City"|t }}: {{ paragraph.field_vih_ocp_zip.value }} {{ paragraph.field_vih_ocp_city.value }}
         </div>
         {# End - city #}
-        {# Begin - municipality #}
+        {# Begin - country #}
         <div>
-          {{ "Municipality"|t }}: {{ paragraph.field_vih_ocp_municipality.value }}
+          {{ "Country"|t }}: {{ paragraph.field_vih_ocp_country.value }}
         </div>
-        {# End - municipality #}
+        {# End - country #}
 
         {# Begin - ordered options #}
         <ul>
