--- a/docroot/themes/custom/site/src/styles/icomoon/variables.scss
+++ b/docroot/themes/custom/site/src/styles/icomoon/variables.scss
@@ -1,20 +1,25 @@
 $icomoon-font-path: "fonts" !default;
 
-$icon-bookmark-o: "\f097";
-$icon-twitter: "\f099";
-$icon-facebook: "\f09a";
-$icon-angle-left: "\f104";
-$icon-angle-right: "\f105";
-$icon-angle-up: "\f106";
-$icon-angle-down: "\f107";
-$icon-instagram: "\f16d";
-$icon-time: "\e8b5";
-$icon-account-circle: "\e853";
-$icon-arrow-right: "\e5c8";
-$icon-phone: "\e0cd";
-$icon-home: "\e88a";
-$icon-info-circle: "\e88e";
-$icon-mail: "\e0e1";
-$icon-portrait: "\e416";
-$icon-search: "\e8b6";
+$icon-youtube: \e900;
+$icon-vimeo: \e901;
+$icon-bookmark-o: \f097;
+$icon-twitter: \f099;
+$icon-facebook: \f09a;
+$icon-angle-left: \f104;
+$icon-angle-right: \f105;
+$icon-angle-up: \f106;
+$icon-angle-down: \f107;
+$icon-instagram: \f16d;
+$icon-time: \e8b5;
+$icon-account-circle: \e853;
+$icon-arrow-right: \e5c8;
+$icon-phone: \e0cd;
+$icon-home: \e88a;
+$icon-info-circle: \e88e;
+$icon-mail: \e0e1;
+$icon-portrait: \e416;
+$icon-search: \e8b6;
+$icon-google-plus: \ea8b;
+$icon-linkedin: \eac9;
+$icon-pinterest: \ead1;
 
