--- a/docroot/themes/custom/site/src/styles/icomoon/style.css
+++ b/docroot/themes/custom/site/src/styles/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?bkgt5i');
-  src:  url('fonts/icomoon.eot?bkgt5i#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?bkgt5i') format('truetype'),
-    url('fonts/icomoon.woff?bkgt5i') format('woff'),
-    url('fonts/icomoon.svg?bkgt5i#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?tn9pyh');
+  src:  url('fonts/icomoon.eot?tn9pyh#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?tn9pyh') format('truetype'),
+    url('fonts/icomoon.woff?tn9pyh') format('woff'),
+    url('fonts/icomoon.svg?tn9pyh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-youtube:before {
+  content: "\e900";
+}
+.icon-vimeo:before {
+  content: "\e901";
+}
 .icon-bookmark-o:before {
   content: "\f097";
 }
@@ -74,4 +80,13 @@
 }
 .icon-search:before {
   content: "\e8b6";
+}
+.icon-google-plus:before {
+  content: "\ea8b";
+}
+.icon-linkedin:before {
+  content: "\eac9";
+}
+.icon-pinterest:before {
+  content: "\ead1";
 }
